# video_lcp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.cpp  cmake_install.cmake  server.cpp
ASynchronous/: client.cpp  server.cpp  server2.cpp  server_old.cpp
Synchronous/: client.cpp
async/: server.cpp
cfg/: yolov3_128.cfg  yolov3_128_192.cfg  yolov3_192_288.cfg  yolov3_256_384.cfg  yolov3_320_480.cfg  yolov3_352.cfg  yolov3_384.cfg  yolov3_384_576.cfg  yolov3_448.cfg  yolov3_448_672.cfg  yolov3_480.cfg  yolov3_512.cfg  yolov3_512_768.cfg  yolov3_544.cfg  yolov3_576.cfg  yolov3_64.cfg  yolov3_64_96.cfg  yolov3_96.cfg
recycle/simple_detection/: detectionShort.cpp
recycle/sync/: server.cpp
simple_detection/: detection.cpp
simulation/: 10mbit-20s.txt  20mbit-20s.txt  40mbit-20s.txt  5mbit-20s.txt  lte-ugent-bw.txt  lte-ugent-output  lte-ugent-output1  lte-ugent-output2  sample.txt  shape-iperf  shape-iperf I  shape-iperf S  shape.sh
simulation/wifi/: wifi_walking.txt
src/: client.cpp  client_ack.cpp  client_ack2.cpp  client_base.cpp  client_darknet.cpp  client_diff.cpp  client_diff_history.cpp  client_diff_timing.cpp  client_thres.cpp  common.h  common.hpp  detection.cpp  monitor.cpp  server.cpp  server_16models.cpp  server_3models.cpp  server_ack.cpp  server_ack_3models.cpp  server_darknet.cpp  server_timing.cpp  test.cpp  test2.cpp  test_client.cpp  test_detection.cpp  test_detection_darknet.cpp  test_detection_darknet2.cpp  test_s.cpp  test_server.cpp
test/: client.cpp  server.cpp
testing/: run_all.sh  server_loop.sh
